--- a/ui/styles/typography.css
+++ b/ui/styles/typography.css
@@ -20,3 +20,10 @@ p {
 	margin-top: 0;
 	margin-bottom: 1rem;
 }
+
+.--center {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
