--- a/ui/Shows/Shows.css
+++ b/ui/Shows/Shows.css
@@ -1,3 +1,12 @@
 .Shows {
 	z-index: 1;
 }
+
+.Shows .__item i {
+	color: var(--blue);
+	padding: 0 .4rem;
+}
+.Shows .__item {
+	margin-bottom: 1rem;
+	line-height: 1.2;
+}
