done with adding stuff

--- a/ui/Console/Console.css
+++ b/ui/Console/Console.css
@@ -2,7 +2,8 @@
 	position: absolute;
 	z-index: -1;
 	height: 100%;
-	width: 100vw;
+	width: 100%;
+	overflow: hidden;
 }
 .Console .__crt {
 	content: "";
