--- a/ui/Prompt/Prompt.css
+++ b/ui/Prompt/Prompt.css
@@ -6,6 +6,12 @@
 	height: 100%;
 }
 
+@media only screen and (max-width: 768px) {
+	.Prompt .__header {
+		padding: 0 2rem;
+	}
+}
+
 @keyframes oscillate {
 	0% {
 		opacity: 0.88;
