--- a/ui/styles/typography.css
+++ b/ui/styles/typography.css
@@ -1,5 +1,6 @@
 h1 {
 	font-size: 4.2rem;
+	text-align: center;
 }
 h2 {
 	font-size: 2.5rem;
@@ -21,10 +22,8 @@ p {
 	margin-bottom: 1rem;
 }
 
-.--center {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 2rem;
+ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
 }
