--- a/ui/PressKit/PressKit.css
+++ b/ui/PressKit/PressKit.css
@@ -1,55 +1,55 @@
 .PressKit {
-	background-color: var(--background-light);
-	color: var(--text-slate);
-	box-shadow: 0px 0px 15px 7px #ff39a169;
-	border: 1px solid var(--laser);
-	border-bottom: none;
+  background-color: var(--background-light);
+  color: var(--text-slate);
+  box-shadow: 0px 0px 15px 7px #ff39a169;
+  border: 1px solid var(--laser);
+  border-bottom: none;
 }
 .PressKit a {
-	color: var(--dark-link);
+  color: var(--dark-link);
 }
 .PressKit .iframe__container {
-	position: relative;
-	padding-bottom: 56.25%;
-	padding-top: 35px;
-	height: 0;
-	overflow: hidden;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 35px;
+  height: 0;
+  overflow: hidden;
 }
 .PressKit .iframe__container iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .PressKit img {
-	display: block;
-	width: 100%;
-	border: 1rem solid white;
-	box-sizing: border-box;
-	margin: 3rem auto;
-	max-width: 60rem;
-	transform: rotate(-2deg);
-	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  display: block;
+  width: 100%;
+  border: 1rem solid white;
+  box-sizing: border-box;
+  margin: 3rem auto;
+  max-width: 60rem;
+  transform: rotate(-2deg);
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 .PressKit .__section {
-	margin: 4rem 0;
-	max-width: 720px;
+  margin: 4rem 0;
+  max-width: 720px;
 }
-.PressKit .__section .--link {
-	margin: .4rem 0;
+.PressKit .__section.--link {
+  margin: 0.4rem 0;
 }
 
 .PressKit .__section br {
-	display: block;
-	content: " ";
-	height: 2rem;
+  display: block;
+  content: ' ';
+  height: 2rem;
 }
 
 @media only screen and (max-width: 76.8rem) {
-	.PressKit {
-		box-shadow: none;
-		border: none;
-	}
+  .PressKit {
+    box-shadow: none;
+    border: none;
+  }
 }
