--- a/ui/_styles/vars.css
+++ b/ui/_styles/vars.css
@@ -1,29 +1,30 @@
 :root {
-	/* Colors */
-	--slate: #282828;
-	--grey: #666;
-	--light-grey: #ddd;
-	--red: #c6452b;
-	--menu-background: #2e1535;
-	--background-light: #f8f7f2;
+  /* Colors */
+  --slate: #282828;
+  --grey: #666;
+  --light-grey: #ddd;
+  --red: #c6452b;
+  --menu-background: #161512;
+  --background-light: #f8f7f2;
 
-	/* Text */
-	--text-slate: #333;
-	--text-grey: #888;
+  /* Text */
+  --text-slate: #333;
+  --text-grey: #888;
 
-	--dark-link: #940197;
+  --dark-link: white;
 
-	--green: #2aff20;
-	--lightgreen: #8fc49c;
+  --green: #2aff20;
+  --text-green: #b3f7b5;
+  --lightgreen: #8fc49c;
 
-	--blue: #39fcff;
-	--laser: #ff39a1;
+  --blue: #39fcff;
+  --laser: #ff39a1;
 
-	--component-padding: 2.4rem 3.2rem 1rem;
-	/* Typography */
-	--body-font: 'Ubuntu Mono', monospace;
+  --component-padding: 2.4rem 3.2rem 1rem;
+  /* Typography */
+  --body-font: "VT323", monospace;
 
-	/* Responsive */
-	--mobile-size: 760px;
-	--menu-sliver: 4rem;
+  /* Responsive */
+  --mobile-size: 760px;
+  --menu-sliver: 4rem;
 }
