adds a ton of stuff tothe game, labyrinth, fight scene and plot

--- a/ui/Prompt/Prompt.css
+++ b/ui/Prompt/Prompt.css
@@ -5,6 +5,11 @@
   z-index: 1;
   height: 100%;
   text-shadow: 0 0 8px rgb(115, 201, 115);
+  font-size: 20px;
+}
+
+.Prompt .__header pre{
+  font-size: 14px;
 }
 
 .Prompt .__header {
